template.css
MaxCDN Tools
PING TESTHTTP TESTSSL TESTPROCSSORLEARN MORE
Procssor cleans and organizes your css the way you want it.
Perfect for css consistency when multiple people contribute.

DOWNLOADCOPYRETURN
body {
    font-family: Arial, Geneva, Helvetica;
    font-size: 20pt;
    color: #000;
    background-color: #00477F;
    text-align: center;
    margin-bottom: 100px;
    padding: 20px;
}
a {
    text-decoration: none
}
a:hover {
    text-decoration: underline
}
div {
    display: block;
    text-align: center;
    padding-top: 10px;
    /* padding-right: 7px; */
}

#apo_short_search_result {
    padding: 0;
}
div.imagewrap {
    display: block;
    text-align: center;
    margin-top: 30px;
}
h1 {
    font-size: 17pt;
    font-family: 'Open Sans';
    padding-bottom: 8px;
}
h2 {
    font-size: 20pt;
    margin-right: 107px;
    font-weight: 400;
}

h2.title {
    margin-right: 0;
}
h3 {
    font-weight: 400;
    text-decoration: underline;
}
img#header {
    display: none
}
#paperLayer1 {
    width: 1000px;
    margin-left: auto;
    margin-right: auto;
    margin-top: -5px;
    padding-bottom: 10px;
    background-color: #FFF;
    opacity: 1;
    /* border-radius: 7px; */
    border: solid 2px #afb6b9;
}
#paperHeader {
    height: 200px;
    width: 980px;
    padding-top: 20px;
    padding-bottom: -10px;
    border-top: solid 1px #39F;
}
#paperHeader img {
    border-left: solid 1px #FFF;
    border-bottom: solid 1px #FFF;
}
#logo {
    width: 180px;
    height: 179px;
    border-left: solid 1px #FFF;
    border-bottom: solid 1px #FFF;
    display: none;
}
#header_photo {
    position: relative;
    left: -559px;
    width: 238px;
    height: 200px;
    display: block;
    float: right;
    padding-top: 35px;
    border-left: solid 1px #FFF;
    border-bottom: solid 1px #FFF;
}
#quote {
    position: relative;
    width: 1000px;
    height: 325px;
    margin-top: -50px;
    background-image: url(images/new_quote2.jpg);
}
#paperHeader ul {
    height: 120px;
    width: 182px;
}
#paperHeader li {
    border-bottom: solid 0 #36f;
    padding-bottom: 1px;
}
#paperHeader li a {
    color: #0033a0;
    width: 120px;
    text-transform: uppercase;
    text-align: left;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 700;
    text-decoration: none;
    font-size: 14pt;
    height: 40px;
    line-height: 43px;
    padding-left: 5px;
    padding-bottom: 1px;
    margin-left: 7px;
    display: block;
}
#paperHeader li a:hover {
    color: #FCB81C;
    border-radius: 6px;
    font-style: italic;
}
#paperHeader li a.active {
    color: #FCB81C;
    padding-top: 0;
}
#paperSubHeader {
    margin-top: 75px
}
#paperSubHeader #welcomeBar {
    width: 1000px;
    height: 48px;
    line-height: 30px;
    margin-left: auto;
    margin-right: auto;
    font-size: 15pt;
    font-family: Open Sans;
    text-align: left;
    color: #FFF;
    margin-bottom: 10px;
    background-color: #09477F;
}
#paperSubHeader #welcomeBar p {
    margin: 0px 0 -8px 13px;
    color: #FFF;
}
#paperSubHeader #welcomeBar a {
    color: #ffb81c;
    text-decoration: none;
    margin-right: 6px;
    font-family: Open Sans;
    font-size: 18px;
}
#paperSubHeader #welcomeBar a:hover {
    text-decoration: none;
    color: #fff;
}
#paperSubHeader ul {
    width: 1000px;
    height: 37px;
    padding-left: 0;
    padding-top: 5px;
    margin: 0 auto;
}
#paperSubHeader li {
    float: left;
    width: 117px;
    height: 28px;
    padding-right: 10px;
    padding-left: 10px;
    background-repeat: no-repeat;
}
#paperSubHeader li a {
    color: #0033a0;
    width: 120px;
    height: 30px;
    line-height: 17px;
    font-family: Open Sans, Helvetica, sans-serif;
    font-size: 12pt;
    font-weight: 700;
    text-align: center;
    display: list-item;
    margin-right: auto;
    margin-left: 10px;
    margin-bottom: 4px;
    padding-left: 5px;
    padding-top: 10px;
    padding-right: 5px;
}
#paperSubHeader li a:hover {
    color: ffb81c;
    border-radius: 6px;
    text-decoration: none;
}
#paperSubHeader li a.active {
    border-radius: 5px;
    color: #FCB81C;
}
#paper {
    padding: 15px;
    padding-top: 25px;
}
#paper .login {
    height: 2px;
    margin-bottom: 5px;
}
#paper .errorMessage {
    width: 938px;
    height: 50px;
    background-color: #FFF;
    color: #000;
    font-size: 16px;
    margin-bottom: 15px;
    padding: 30px 5px 5px;
}
#paper .upcomingEvents {
    clear: right;
    float: right;
    width: 208px;
    border: solid 1px #000;
    margin-bottom: 15px;
    padding: 10 7 10 7;
}
#paper .upcomingEvents hr {
    width: 95%;
    display: none;
}
#paper .upcomingEvents .eventBox {
    font-size: 10pt;
    border-bottom: solid 1px gray;
    padding: 5px;
}
#paper .upcomingEvents .odd {
    background-color: #D9D9D9
}
#paper .upcomingEvents .eventBox .title a {
    color: #000;
    font-weight: 700;
    font-family: Helvetica;
    font-size: 13px;
}
#paper .upcomingEvents .eventBox .date {
    color: #0947ff;
    font-family: Helvetica;
}

#paper .upcomingEvents .eventBox .location {
    color: #0947ff;
    font-family: Helvetica;
}
#paper .shoutbox .postingBox {
    font-size: 8pt;
    height: 35em;
    overflow: auto;
    border-bottom: solid 0 #000;
    padding: 5px;
}
#paper .shoutbox .posting {
    border-bottom: solid 1px #000;
    margin-bottom: .5em;
}
#paper .evalnag {
    margin-bottom: 15px
}
#paper .evalnag .moduleTitle {
    color: #FFF;
    background-color: #696969;
    text-align: center;
    font-weight: 700;
    font-size: 10pt;
    border: solid 1px #000;
    font-family: 'Helvetica';
    padding: 5 0 5 0;
}
#paper .evalnag .eventList {
    padding: 5px
}
#paper .blueInfoBox {
    width: 710px;
    background-color: #D3D4FB;
    border-top: solid 1px #383CD6;
    margin-bottom: 15px;
    padding: 5px;
}
#paper .blueInfoBox h3,
#paper .blueInfoBox p {
    margin-left: 10px
}
#paper .blueInfoBox p {
    margin-bottom: .5em
}
#paper .newsItem {
    width: 720px;
    margin-bottom: 25px;
}
#paper .newsItem h2 {
    border-bottom: solid 1px #000;
    padding-left: 0;
    padding-top: 25px;
    line-height: 25px;
    size: 25px;
    color: #0333A0;
    font-style: none;
}
#paper .newsItem .date {
    color: gray;
    text-align: right;
}
#paper .newsItem p {
    padding-top: 15px;
    padding-left: 5px;
    size: 14px;
    line-height: 25px;
    text-align: left;
    color: #000;
}
#paper .newsItem .link {
    text-align: right
}
#paperFooter {
    clear: both;
    width: 980px;
    height: auto;
    padding-bottom: 15px;
}
#disclaimer {
    width: 920px;
    background-color: #00477F;
    margin-left: auto;
    margin-right: auto;
    padding: 40px 40px 15px;
}
#disclaimer p {
    text-align: center;
    font-size: 12pt;
    color: #FFF;
    font-family: Arial, Helvetica, sans-serif;
    padding-bottom: 2px;
}
ul#gallery > li {
    position: relative;
    left: 20px;
    float: left;
    list-style: none;
    font-size: 12px;
    margin: 0 20px 20px 0;
}
ul#gallery img {
    border: solid #000 1px;
    border-radius: 3px;
}
.collage-container {
    width: 100%;
    height: auto;
    text-align: center;
}
.collage-pictures {
    display: inline-block;
    margin: 10px;
}
.person-picture {
    float: left;
    margin: 10px;
}
.person-picture img {
    width: 200px;
    height: 200px;
    border: 1px solid #000;
}
strong,
#paper .upcomingEvents .eventBox .title {
    font-weight: 400;
}
#paperSubHeader #welcomeBar #logout,
#paper .login form {
    float: right;
    margin-right: 10px;
}
#paper .upcomingEvents .moduleTitle,
#paper .mailer .moduleTitle,
#paper .shoutbox .moduleTitle {
    color: #FFF;
    background-color: #696969;
    text-align: center;
    font-weight: 700;
    font-size: 10pt;
    padding: 5 0 5 0;
    border-bottom: solid 1px #000;
    font-family: Helvetica;
}
#paper .mailer,
#paper .shoutbox {
    clear: right;
    float: right;
    width: 208px;
    border: solid 1px #000;
    margin-bottom: 15px;
    background-color: #D3D4FB;
    padding: 10 7 10 7;
}
#paper .mailer .messageBody,
#paper .mailer .recipients {
    font-size: 10pt;
    font-weight: 700;
    padding: 5px;
    font-family: Helvetica;
}
#paper .mailer textarea,
#paper .shoutbox textarea {
    width: 200px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
#paper .mailer .buttons,
#paper .shoutbox .buttons {
    background-color: #FFF;
    border-top: solid 1px gray;
    padding: 5px;
}
#paperFooter p,
.center {
    text-align: center
}
 

